@@ -6,12 +6,6 @@ Which states all newly created windows should be placed on a specific head.
 Action: Move all ( or one specific ) windows from one head to another.
 This is usefull if a head is disabled for some reason. 
 
-
-Focus cycling: Cycle through heads focusables.
-Which heads focusables should be be in the focus cycle should be determined by
-mouse position ( kind of "sloppy focus" ) or a "fixed" boolean variable set
-through setresource command.
-
 ******
 
 *** Rewrites ***
